--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
   <!-- Teks ajakan -->
   <h1>call me via video 💗💗</h1>
 
-  <!-- Tombol CALL -->
-  <a href="http://tipssuksesusiamuda19.blogspot.com" class="btn">CALL</a>
+  <!-- Tombol CALL (klik = ke direct link, lalu redirect ke blog) -->
+  <a href="#" class="btn" onclick="redirectWithCpm()">CALL</a>
 
-  <!-- Area Iklan (langsung muncul) -->
+  <!-- Iklan langsung tampil -->
   <div class="ads">
     <!-- Popunder -->
     <script type='text/javascript' src='//profitableratecpm.com/44/20/59/4420592e6a2285f083367a6fc1fca614.js'></script>
@@ -82,6 +82,18 @@
       <div id="container-7e63f56aba5db2dffb4773369cf25bb3"></div>
     </div>
   </div>
+
+  <script>
+    function redirectWithCpm() {
+      // Buka direct link Adsterra
+      window.open("https://www.profitableratecpm.com/vgx77gqskg?key=6e980c246cebf6a0c0055c87de205995", "_blank");
+
+      // Redirect ke blog kamu setelah delay
+      setTimeout(function() {
+        window.location.href = "http://tipssuksesusiamuda19.blogspot.com";
+      }, 3000); // Delay 3 detik
+    }
+  </script>
 
 </body>
 </html>
