--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ratna Call Video</title>
-  <link rel="icon" href="https://i.imgur.com/gDYJYRt.jpeg" type="image/jpeg" />
+   <!-- Favicon -->
+  <link rel="icon" href="https://i.imgur.com/hSo1Mev.jpeg" type="image/jpeg" />
+  
+  <!-- Open Graph (thumbnail saat dibagikan) -->
+  <meta property="og:title" content="Ratna Call Video" />
+  <meta property="og:description" content="Klik untuk video call dengan Ratna 😍😍" />
+  <meta property="og:image" content="https://i.imgur.com/hSo1Mev.jpeg" />
+  <meta property="og:url" content="https://ratnacallvideo.github.io/Ratna.call.video/" />
+  <meta property="og:type" content="website" />
   <style>
     body {
       margin: 0;
@@ -97,3 +105,5 @@
 
 </body>
 </html>
+
+Final landing page banner klik redirect blog popunder adstera 
