--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background-image: url('https://i.imgur.com/J99fFyZ.jpeg');
+      background-image: url('https://i.imgur.com/TjNSx1k.jpeg');
       background-size: cover;
       background-position: center;
     }
